# wait-rs

./: .gitignore  Cargo.toml  GPT.md  bot
.gpt-runner/: copilot.gpt.md
abi/: tokenabi.json
src/: build_and_copy.sh  config.json  data.json  main.rs  telegam.rs
src/config/: mod.rs
