[package]
name = "wait_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
ethers = {version = "2.0.8"}
serde="1.0.171"
serde_json ="1.0.103"
teloxide={ version ="0.12.2", features = ["macros"]}
lazy_static ="1.4.0"
regex="1.9.1"